# api/models/subject.go
@@ -2,8 +2,13 @@ package models
 
 type Subjects struct{
 	Id string `json:"id"`
-	Name string `josn:"name"`
+	Name string `json:"name"`
 	Type string `json:"type"`
 	CreatedAt string `json:"created_at"`
 	UpdatedAt string `json:"updated_at"`
+}
+
+type SubjectGetAll struct{
+	Subject []Subjects
+	Count int
 }
